[package]
name = "dbuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['std']

std = ['alloc']
alloc = ['slab']

[dependencies]

[dependencies.slab]
version = '0.4.6'
default-features = false
optional = true

[dependencies.loom]
version = '0.5.6'
default-features = false
optional = true