[package]
name = "dbuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['std']

std = ['alloc', 'once_cell/std']
alloc = ['slab']

[dependencies]
scopeguard = '1'

[dependencies.slab]
version = '0.4.6'
default-features = false
optional = true

[dependencies.loom]
version = '0.5.6'
default-features = false
optional = true

[dependencies.parking_lot]
version = '0.12.1'
default-features = false
optional = true

[dependencies.once_cell]
version = '1.12.0'
default-features = false
optional = true